--- a/software.html
+++ b/software.html
@@ -39,16 +39,48 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://boards.greenhouse.io/10xgenomics/jobs/1769868?gh_jid=1769868&gh_src=452bae3a1'>Job Application for Software Engineer in Test - Computational Biology at 10x Genomics</a></h5> 
+<h5><a href='https://www.ndt.com/job/senior-software-engineer-8498BK'>Senior Software Engineer  | NDT</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<h5><a href='https://snap.hr/popsa/job/software-engineer-data-and-machine-learning/60f377ba6a24a9a49eb68e1758c26d4d/'>Software Engineer ? Data and Machine Learning at Popsa</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qGjaVfwO&k=Job&j=oxvkbfwh&__jvst=Employee+Referral&__jvsd=s2B1Pgwe&__jvsc=Twitter&bid=njxVpMwr'>Spectra Logic Careers - Software Engineer / Developer - (Golang)</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Renaissance/743999698601455-software-engineer'>Renaissance Software Engineer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Renaissance/743999698601585-senior-software-engineer'>Renaissance Senior Software Engineer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Renaissance/743999698601705-senior-software-engineer'>Renaissance Senior Software Engineer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698601128-software-engineer-java-jr1008839-'>Broadridge Software Engineer (Java) (JR1008839) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/ZARecruiting/743999698604238-software-engineer-ii-global-fortune-company'>Z&A Recruiting Software Engineer II ? Global Fortune Company | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/10xgenomics/jobs/1769868?gh_jid=1769868&gh_src=452bae3a1'>Job Application for Software Engineer in Test - Computational Biology at 10x Genomics</a></h5> 
+<p><span class="badge badge-light">Pleasanton, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q6M9VfwG&k=Job&j=o0EUafws&__jvst=Employee&__jvsd=s8Ischwg&__jvsc=Twitter&bid=nZ6TpMwE'>New Relic Careers - Senior Software Engineer - Java - Platform</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Barcelona, Spain  Barcelona, Spain</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
 <h5><a href='https://raisin.join.com/jobs/452387-senior-software-engineer-front-end-m-f-d'>Job @ Raisin (Berlin): (Senior) Software Engineer ... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Berlin Berlin, Germany  Berlin</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='http://pdi.applytojob.com/apply/tVp0Oyve7P/Software-Engineer-III'>Software Engineer III - PDI - Career Page</a></h5> 
@@ -83,7 +115,7 @@
 <p><span class="badge badge-light">United States  Berkeley</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rakuten.referrals.selectminds.com/jobs/senior-software-engineer-leisure-lpd-10051'>Senior Software Engineer (Leisure): LPD - Rakuten Careers</a></h5> 
+<h5><a href='https://rakuten.referrals.selectminds.com/jobs/senior-software-engineer-leisure-lpd-10051'>Senior Software Engineer (Leisure): LPD - Rakuten Careers</a></h5> 
 <p><span class="badge badge-light">Tokyo Tokyo Tokyo, Japan</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -119,7 +151,7 @@
 <p><span class="badge badge-light">New York, NY  Canada Australia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/teacherspayteachers/jobs/1933099'>Job Application for Senior Software Engineer, Data at TeachersPayTeachers</a></h5> 
+<h5><a href='https://boards.greenhouse.io/teacherspayteachers/jobs/1933099'>Job Application for Senior Software Engineer, Data at TeachersPayTeachers</a></h5> 
 <p><span class="badge badge-light">New York  Canada Australia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -175,7 +207,7 @@
 <p><span class="badge badge-light">Zurich, Switzerland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/beekeeper/jobs/1938573'>Job Application for Software Engineer - Graduate (Krak?w) at Beekeeper Careers</a></h5> 
+<h5><a href='https://boards.greenhouse.io/beekeeper/jobs/1938573'>Job Application for Software Engineer - Graduate (Krak?w) at Beekeeper Careers</a></h5> 
 <p><span class="badge badge-light">Krak?w Krak?w Krak?w</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -195,7 +227,7 @@
 <p><span class="badge badge-light">Wien, Austria  Vienna London Malm?</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://ngtechinc.zohorecruit.com/recruit/ViewJob.na?digest=tIjHuWh8jyuU41WZZ2OUxOEV8BGBoXxHBWNbvIBk@z8-&embedsource=CareerSite'>Sr. Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ngtechinc.zohorecruit.com/recruit/ViewJob.na?digest=tIjHuWh8jyuU41WZZ2OUxOEV8BGBoXxHBWNbvIBk@z8-&embedsource=CareerSite'>Sr. Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -251,11 +283,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/menlosecurity/jobs/4501326002'>Job Application for Front End Software Engineer at Menlo Security</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/menlosecurity/jobs/4501326002'>Job Application for Front End Software Engineer at Menlo Security</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/smarkets/jobs/1485264'>Job Application for Software Engineer Graduates 2020 at Smarkets</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/smarkets/jobs/1485264'>Job Application for Software Engineer Graduates 2020 at Smarkets</a></h5> 
 <p><span class="badge badge-light">London London Los Angeles</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -403,45 +435,13 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobswipe.co/jobs/5dba914f63f9f8b25208c740'>Siemens if hiring - Software Engineer | JobSwipe</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobswipe.co/jobs/5dba914f63f9f8b25208c740'>Siemens if hiring - Software Engineer | JobSwipe</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
 <h5><a href='http://slingshotaerospace.applytojob.com/apply/9b3k2t4qb4/Data-Pipeline-Software-Engineer'>Data Pipeline Software Engineer - Slingshot Aerospace - Career Page</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qdxaVfwz&k=Job&j=oUYQ6fwy&__jvst=Employee&__jvsd=sezSahwB&__jvsc=Twitter&bid=n2blpMwe'> HHB Systems Careers - Perl and Python Software Developer</a></h5> 
-<p><span class="badge badge-light">Springfield, Virginia</span></p>
-<p>Posted on:: 2019-10-31</p>
-<hr/>
-<h5><a href='https://kiperformance.join.com/jobs/466532-mobile-software-engineer-ios-m-w-d'>Job @ KI Group (Cologne): Mobile Software Engineer... | JOIN</a></h5> 
-<p><span class="badge badge-light">Cologne Cologne, Germany</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/servicenow/job/o6Crbfw4'>ServiceNow Careers - Senior Software Engineer</a></h5> 
-<p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/servicenow/job/olqqbfw6'>ServiceNow Careers - Sr. Software Engineer - Full Stack</a></h5> 
-<p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA, USA</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/servicenow/job/opRpbfwA'>ServiceNow Careers - Senior/Staff Java Software Engineer - Full Stack</a></h5> 
-<p><span class="badge badge-light">Chicago, Illinois  Chicago, IL</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://sintratec.join.com/jobs/454869-software-developer-java'>Job @ Sintratec (Brugg): Software Developer Java | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698547390-senior-staff-software-engineer-devops'>Visa Senior Staff Software Engineer, DevOps | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Karnataka, India</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=o8PH9fwx&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nq7kpMwx'>Guidewire Software, Inc. Careers - Software Engineer Graduate - Krakow, Poland</a></h5> 
-<p><span class="badge badge-light">Krakow, Poland  Krakow, Poland  Krakow, Poland</span></p>
-<p>Posted on:: 2019-10-31</p>
 <hr/>
 
 
