--- a/project-manager.html
+++ b/project-manager.html
@@ -40,14 +40,22 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.crelate.com/portal/vangst/job/jjjussroh356bd3ku7thrcczry'>Marketing Project Manager  | Vangst</a></h5> 
+<h5><a href='https://nmhc.referrals.selectminds.com/jobs/project-manager-ii-epmo-full-time-days-33405'>Project Manager II-ePMO, Full-Time, Days - Northwestern Medicine Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/CityofPhiladelphia/743999698601255-continuum-of-care-program-manager-for-underrepresented-populations'>City of Philadelphia Continuum of Care Program Manager for Underrepresented Populations | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.crelate.com/portal/vangst/job/jjjussroh356bd3ku7thrcczry'>Marketing Project Manager  | Vangst</a></h5> 
+<p><span class="badge badge-light">Boulder</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://spotlab.recruitee.com/o/clinical-project-manager-madrid'>
       Clinical Project Manager - SpotLab
     </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Madrid, Spain  Madrid</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/nasuni/job/omDrbfwl'> Nasuni Careers - Principal Technical Program Manager</a></h5> 
@@ -70,7 +78,7 @@
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/geotab/7c41c540-6302-413b-87b2-3c23bcd429bc'>Geotab - Senior Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/geotab/7c41c540-6302-413b-87b2-3c23bcd429bc'>Geotab - Senior Project Manager</a></h5> 
 <p><span class="badge badge-light">Canada  North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -160,7 +168,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/logitech/job/ojvrbfwa'>Logitech Careers - Project Manager, Package</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/logitech/job/ojvrbfwa'>Logitech Careers - Project Manager, Package</a></h5> 
 <p><span class="badge badge-light">Taiwan</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -192,11 +200,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobware.net/Job/Project-Manager-m-f-Division-Professional-Services.323071275.html?jw_chl_seg=YOURJOBINGERMANY&skin=zaehlpixel_only'>Project Manager (m/f) Division Professional Services | Wirecard Technologies GmbH | Job</a></h5> 
+<h5><a href='https://jobs.jobware.net/Job/Project-Manager-m-f-Division-Professional-Services.323071275.html?jw_chl_seg=YOURJOBINGERMANY&skin=zaehlpixel_only'>Project Manager (m/f) Division Professional Services | Wirecard Technologies GmbH | Job</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698567797-rexroth-project-manager-bluesky'>Bosch Group Rexroth ? Project manager - BlueSky | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698567797-rexroth-project-manager-bluesky'>Bosch Group Rexroth ? Project manager - BlueSky | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Budapest</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -224,7 +232,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://careers.kyyti.com/jobs/312492-deployment-project-manager'>Deployment Project Manager - Kyyti Group</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.kyyti.com/jobs/312492-deployment-project-manager'>Deployment Project Manager - Kyyti Group</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -264,7 +272,7 @@
 <p><span class="badge badge-light">Missoula Atlanta, GAGlendale, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://cennox.applytojob.com/apply/gF2TtWARGy/Electrical-Project-Manager'>Electrical Project Manager - Cennox - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://cennox.applytojob.com/apply/gF2TtWARGy/Electrical-Project-Manager'>Electrical Project Manager - Cennox - Career Page</a></h5> 
 <p><span class="badge badge-light">Missoula Atlanta, GAGlendale, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -317,7 +325,7 @@
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/xylem/job/oeGrbfwg'>Xylem Careers - Project Manager/Sr. Project Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/xylem/job/oeGrbfwg'>Xylem Careers - Project Manager/Sr. Project Manager</a></h5> 
 <p><span class="badge badge-light">Charlotte North Carolina</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -359,7 +367,7 @@
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/umlaut/job/otmsbfwc'>umlaut North America Careers - Aerospace Project Manager - Supply Chain</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/umlaut/job/otmsbfwc'>umlaut North America Careers - Aerospace Project Manager - Supply Chain</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -415,7 +423,7 @@
 <p><span class="badge badge-light">Detroit Detroit</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kimmel-associates.breezy.hr/p/ff117bcc2ec3-project-manager'>Project Manager</a></h5> 
+<h5><a href='https://kimmel-associates.breezy.hr/p/ff117bcc2ec3-project-manager'>Project Manager</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA  California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -444,14 +452,6 @@
 </a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Square/743999698539366-learning-development-project-manager-l-p'>Square Learning & Development Project Manager, L&P | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">San Francisco, CA</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qYS9VfwE&k=Job&j=olBrbfwi&__jvst=Employee+Referral&__jvsd=sVq6aiwo&__jvsc=Twitter&bid=nyKfpMwd'>Curriculum Associates Careers - Project Manager / Scrum Master</a></h5> 
-<p><span class="badge badge-light">North Billerica, Massachusetts</span></p>
-<p>Posted on:: 2019-10-30</p>
 <hr/>
 
 
