--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698605057-digital-product-manager'>Biogen Digital Product Manager | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://faveo.join.com/jobs/447026-product-manager-product-owner-m-w-d'>Job @ faveo (Essen): Product Manager / Product Own... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
@@ -68,7 +72,7 @@
 <p><span class="badge badge-light">Cologne, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ziprecruiter/jobs/1938474'>Job Application for Product Manager  at ZipRecruiter</a></h5> 
+<h5><a href='https://boards.greenhouse.io/ziprecruiter/jobs/1938474'>Job Application for Product Manager  at ZipRecruiter</a></h5> 
 <p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -88,7 +92,7 @@
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/mapbox/jobs/1559043?gh_jid=1559043&gh_src=8f78b4871'>Job Application for Senior Product Manager, Billing &amp; IAM at Mapbox</a></h5> 
+<h5><a href='https://boards.greenhouse.io/mapbox/jobs/1559043?gh_jid=1559043&gh_src=8f78b4871'>Job Application for Senior Product Manager, Billing &amp; IAM at Mapbox</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -138,7 +142,7 @@
 <p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/dcigroup/743999698575946-digital-product-manager'>DCI Group Digital Product Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/dcigroup/743999698575946-digital-product-manager'>DCI Group Digital Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -204,7 +208,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://infutor.applytojob.com/apply/mkwvPctkJG/Senior-Product-Manager-Consumer-Identities'>Senior Product Manager, Consumer Identities - Infutor Data Solutions - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://infutor.applytojob.com/apply/mkwvPctkJG/Senior-Product-Manager-Consumer-Identities'>Senior Product Manager, Consumer Identities - Infutor Data Solutions - Career Page</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -212,13 +216,13 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://whatfix101.recruiterbox.com/jobs/fk03o2r'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://whatfix101.recruiterbox.com/jobs/fk03o2r'>
     Senior Product Designer at Whatfix
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ShopUp/743999698547791-product-manager'>ShopUp Product Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ShopUp/743999698547791-product-manager'>ShopUp Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dhaka, Bangladesh</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -266,7 +270,7 @@
 <p><span class="badge badge-light">Brazil</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SFL/743999698481274-product-owner'>SFL Product Owner | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SFL/743999698481274-product-owner'>SFL Product Owner | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Yerevan</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -318,7 +322,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/thinkingphones/jobs/1934901'>Job Application for Product Owner at Fuze</a></h5> 
+<h5><a href='https://boards.greenhouse.io/thinkingphones/jobs/1934901'>Job Application for Product Owner at Fuze</a></h5> 
 <p><span class="badge badge-light">Aveiro, Portugal Porto, Portugal</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -378,7 +382,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://perkspot12.applytojob.com/apply/2BK9BoBS7a/Senior-Product-Manager'>Senior Product Manager - PerkSpot - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://perkspot12.applytojob.com/apply/2BK9BoBS7a/Senior-Product-Manager'>Senior Product Manager - PerkSpot - Career Page</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -449,10 +453,6 @@ successful marketing strategy to increase market share of Vifor Pharma products
 <h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698505140-principal-product-manager-data-platform-and-analytics'>Optimizely Principal Product Manager, Data Platform and Analytics | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qRIaVfwo&k=Job&j=oMbsbfwk&__jvst=Employee&__jvsd=sU0JUhwj&__jvsc=Jobvite&bid=n5NAoMw7'>Justice Digital and Technology Careers - Product Manager, London</a></h5> 
-<p><span class="badge badge-light">London  London  London London  London  London</span></p>
-<p>Posted on:: 2019-10-30</p>
 <hr/>
 
 
